@@ -30,7 +30,7 @@
 #include "libavutil/avutil.h"
 
 #define LIBAVCODEC_VERSION_MAJOR 52
-#define LIBAVCODEC_VERSION_MINOR 30
+#define LIBAVCODEC_VERSION_MINOR 31
 #define LIBAVCODEC_VERSION_MICRO  2
 
 #define LIBAVCODEC_VERSION_INT  AV_VERSION_INT(LIBAVCODEC_VERSION_MAJOR, \
@@ -197,6 +197,7 @@ enum CodecID {
     CODEC_ID_TMV,
     CODEC_ID_V210,
     CODEC_ID_DPX,
+    CODEC_ID_MAD,
 
     /* various PCM "codecs" */
     CODEC_ID_PCM_S16LE= 0x10000,
